<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.cmpe277.yaminimuralidharen.androiddatastorage.AddItemActivity">


    <TextView
        android:id="@+id/additem_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addnewitem"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        />
    <android.support.v4.widget.Space
        android:id="@+id/space"
        android:layout_below="@+id/additem_title"
        android:layout_width="match_parent"
        android:layout_height="20dp" />
    <TextView
        android:id="@+id/item_name"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_name"
        android:layout_below="@+id/space"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        />
    <EditText
        android:id="@+id/item_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/space"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/item_name"

        />
    <TextView
        android:id="@+id/item_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_desc"
        android:layout_below="@+id/item_name"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/item_desc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_name"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/item_desc"
        android:layout_marginTop="15dp"

        />
    <TextView
    android:id="@+id/item_price"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/item_price"
    android:layout_below="@+id/item_desc"
        android:textColor="@color/white"
    android:textSize="25sp"
    android:paddingLeft="10dp"
    android:layout_marginTop="15dp"
    />
    <EditText
        android:id="@+id/item_price_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_desc"
        android:layout_toRightOf="@+id/item_price"
        android:textColor="@color/white"
        android:layout_marginTop="15dp"
        />

    <TextView
        android:id="@+id/item_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_rev"
        android:layout_below="@+id/item_price"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        />
    <EditText
        android:id="@+id/item_review_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_price"
        android:textColor="@color/white"
        android:layout_toRightOf="@+id/item_review"
        android:layout_marginTop="15dp"
        />

    <Button
        android:id="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="40dp"
        android:layout_centerVertical="true"
        android:layout_below="@+id/item_review"
        android:background="@android:color/holo_green_light"
        android:text="@string/add"
        />
    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/item_review"
        android:layout_toRightOf="@+id/addButton"
        android:background="@android:color/holo_green_light"
        android:text="@string/cancel"
        />
</RelativeLayout>
