<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.cmpe277.yaminimuralidharen.androiddatastorage.MainActivity">

    <TextView
        android:id="@+id/titleview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proddb"
        android:textSize="20sp"
        android:background="@color/white"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_centerHorizontal="true"
         />
<Button
    android:id="@+id/insert_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/titleview"
    android:layout_marginLeft="25dp"
    android:layout_marginTop="50dp"
    android:text="@string/insertitem"
    android:background="@color/colorAccent"
    android:layout_centerHorizontal="true"
    android:onClick="insertItem"
    />


    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchitem"
        android:background="@color/black"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/insert_button"
        android:onClick="searchItem"
        android:layout_centerHorizontal="true"
        />
</RelativeLayout>
