<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="com.cmpe277.yaminimuralidharen.androiddatastorage.SearchActivity">

    <TextView
        android:id="@+id/search_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchitem"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />
    <TextView
        android:id="@+id/enter_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_name"
        android:textColor="#000000"
        android:layout_below="@+id/search_item"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:paddingLeft="10dp"
        android:layout_marginTop="15dp"
        />

    <EditText
        android:id="@+id/item_name_search_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/enter_item"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:background="@color/white"
        android:ems="20"
        />

    <Button
        android:id="@+id/search_item_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="90dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_below="@+id/item_name_search_edit"
        android:text="@string/search"
        />
    <Button
        android:id="@+id/cancel_search_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:background="@android:color/holo_blue_dark"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/item_name_search_edit"
        android:layout_toRightOf="@+id/search_item_button"
        android:text="@string/cancel"
        />
    <TextView
        android:id="@+id/result_text"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:layout_below="@+id/cancel_search_Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</RelativeLayout>
